soph/site-specific.css
/*#region Switcher background */

.uk-switcher .uk-panel {
    background-color: 
    #eee;
    margin-top: -15px;
}

/*#endregion Switcher background */

/*#region Grid People Directory */

.grid-people-directory .uk-panel {
    border: 1px solid #1e6b52;
}


.grid-people-directory .uk-article-meta {
    display: none;
}

.grid-people-directory .uk-margin {
    margin-top: 0;
}

.grid-people-directory .uk-margin>p:first-child {
    margin: 0;
}

.grid-people-directory .profile-contact-info {
    display: block;
    background-color: #eee;
    padding: 15px 20px;
}

.grid-people-directory .profile-title {
    padding: 10px 20px 0;
}

.grid-people-directory .profile-button-container {
    margin-top: 3em;
    display: block;
}

.grid-people-directory a.profile-button {
    text-shadow: none;
    transition: all 0.3s;
    -webkit-transition: all 0.3s;
    padding: 0.5em 1em;
    font-weight: 600 !important;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #fafafa;
    border-width: 1px 0 0 0 !important;
    border-color: #eee;
    border-style: solid;
    text-transform: uppercase;
    font-size: 0.9rem !important;
    text-align: center;
    text-decoration: none;
    color: #222;
}

.grid-people-directory .profile-button:hover {
    color: #fff !important;
    background-color: #1e6b52;
}

.mobile-directory .profile-heading__wrapper {
    margin-top: -15px;
}

.profile-research-interests {
    display: block;
    margin-top: 20px;
}

.uk-grid-margin .profile-research-interests {
    padding: 0 20px;
}

/*#endregion Grid People Directory */

/*#region Removes bottom border from parent menu items */

.sidebar-heading--first-level {
    border-bottom: none;
}

/*#endregion Removes bottom border from parent menu items */

/*#region Widgetkit Read More Buttons */

.read-more-btns .uk-button {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: #1e6b52;
    color: #fff !important;
    font-weight: 600 !important;
    left: 0;
}

/*#region Widgetkit Read More Buttons */

.read-more-btns .uk-button {
    position: absolute;
    bottom: 0;
    width: 100%;
    background-color: #1e6b52;
    color: #fff !important;
    font-weight: 600 !important;
    left: 0;
}

.read-more-btns .uk-margin {
    margin-bottom: 50px;
}

/*#endregion Widgetkit Read More Buttons */

/*#region Widgetkit Bulleted List */

.uk-switcher ul,
.uk-grid ul,
.uk-accordion ul {
    margin: 0 0 0 30px;
    list-style-type: disc;
}

/*#endregion Widgetkit Bulleted List */


/*#region ODEI Events Focus Box */
.soph-events-focus-box {
    margin: 20px 10px;
    box-shadow: 0 1px 6px 1px #d3d3d3;
    background-color: #fafafa;
}

.soph-events-focus-box__heading {
    margin-top: 0;
    font-size: 1.6rem;
    text-align: center;
    border-bottom: 3px solid #80bc00;
    padding: 10px 0;
    font-family: "proxima-nova", Arial, Helvetica, sans-serif !important;
}

.soph-events-focus-box .localist-widget-eds li {
    padding: 10px;
    box-sizing: border-box;
    background-color: transparent;
    margin: 0 !important;
}

.soph-events-focus-box ul.localist-widget-eds {
    padding: 0 10px;
    box-sizing: border-box;
}

.soph-events-focus-box__button {
    display: inline-block;
    margin-bottom: 1em;
    background-color: #fff;
    border: 1px solid #d3d3d3;
    padding: 5px 10px;
    box-sizing: border-box;
}

.soph-events-focus-box__button:hover {
    text-decoration: none;
    background-color: #1E6B52;
    color: #fff !important;
    border: 1px solid #1E6B52;
}

@media all and (min-width:700px) {
    .soph-events-focus-box {
        float: right;
        margin: 0 0 20px 20px;
    }
}

/*#endregion ODEI Events Focus Box */


/*#region Graduate Programs Widgekit Grid */

/*removes wk default and adds layout*/
.soph-grad-programs-grid {
    display: flex;
    flex-wrap: wrap;
    height: auto !important;
    margin-left: 0 !important;
}

/*removes wk default placement*/
.soph-grad-programs-grid>div {
    position: relative !important;
    left: 0 !important;
    top: 0 !important;
    padding: 0 !important;
    margin: 10px;
}

@media all and (min-width:700px) {
    .soph-grad-programs-grid>div {
        flex-basis: calc(50% - 20px);

    }
}

@media all and (min-width:1024px) {
    .soph-grad-programs-grid>div {
        flex-basis: calc(33.3% - 20px);

    }
}

/*adjusts image container*/
.soph-grad-programs-grid .uk-panel-box>.uk-panel-teaser {
    margin: 0;
}

.soph-grad-programs-grid img {
    border-bottom: 3px solid #80bc00;
}

/*adjusts grid item */
.soph-grad-programs-grid .uk-panel {
    height: 100%;
    box-sizing: border-box;
    padding: 0;
    border: 0;
    display: flex;
    flex-direction: column;
    box-shadow: 0 1px 6px 1px #d3d3d3;
}


.soph-grad-programs-grid .uk-panel:hover {
    transition: all 0.2s ease-in-out;
    box-shadow: 0 0 0 1px #444;
}

/*adjusts content box container */
.soph-grad-programs-grid .uk-margin {
    margin-top: 0;
    display: flex;
    flex-direction: column;
    flex-grow: 1;

}

/*title for each grid item */
.soph-grad-programs-grid__degree-name {
    font-size: 1.1em;
    font-weight: 600;
    padding: 0 10px 10px;
    margin: 10px 0 0;
}

/* tag styling*/
.soph-grad-programs-grid__tags {
    background-color: #eee;
    padding: 5px 10px;
    font-weight: 600;
    font-size: .9em;
    display: flex;
    flex-wrap: wrap;
    margin-top: auto;

}

/*#endregion Graduate Programs Widgekit Grid */

